@@ -1,3 +1,9 @@
+2025-06-19  Zhengyi Fu  <i@fuzy.me>
+
+	Update gptel configuration
+
+	* site-lisp/gptel-config.el: New file.
+
 2025-06-18  Zhengyi Fu  <i@fuzy.me>
 
 	Provide completion when reading elfeed tags
